syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.preference.client.v1";

package com.glance.spaces.lsspace.preference.client.v1;

import "com/glance/spaces/common/common_client_params.proto";
import "com/glance/spaces/lsspace/preference/pref_data.proto";
import "com/glance/spaces/snp/snp_params.proto";

message UpdatePreferenceClientMessage {
  common.CommonClientParams common_params = 1;
  snp.SnpParams snp_params = 2;
  UpdatePreferenceMessage update_preference_message = 3;
}

message UpdatePreferenceMessage {
  string space_id = 1;
  lsspace.preference.PreferenceData updated_preferences = 2;
}